sandc/test/fixtures/astRegression/shouldFail/productions/anonymousInnerClassInstantiationExpression/List.sand
pub class List {
    foo() {
        new Foo[+] {
            
        }
    }
}